# pdfextractor

./: .gitignore  LICENSE  README.md  pyproject.toml
pdfextractor/: cli.py  config.py  extract.py  generate.py  main.py
tests/: extract_test.py
