[tool.poetry]
name = "pdfextractor"
version = "0.1.0"
description = "PDF extractor"
authors = ["fbeethoven <fulgencio.beethoven@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
requests = "^2.32.3"
pypdf = "^4.3.1"

[tool.poetry.scripts]
pdfextract = "pdfextractor.extract:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
