[tool.poetry]
name = "pdfextractor"
version = "1.0.0"
description = "Extract polish text from pdf and produce a line-by-line bilingual summary"
authors = ["fbeethoven <fulgencio.beethoven@gmail.com>"]
readme = "README.md"
include = [{ path = "pdfextractor/fonts/*.ttf" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
requests = "^2.32.3"
pypdf = "^4.3.1"
reportlab = "^4.2.2"

[tool.poetry.scripts]
pdfextract = "pdfextractor.generate:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
